# DarkReach

./: Cargo.toml  README.md  TODO.md
agent/: Cargo.toml
agent/src/: agent.rs  main.rs  proto.rs
c2/: Cargo.toml
c2/src/: lib.rs  main.rs  state.rs
c2/src/agent/: mod.rs  ws.rs
c2/src/api/: agents.rs  mod.rs  ops.rs  tasks.rs
c2/src/ws/: agent_session.rs  mod.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/mod_agent/: main.rs
cli/src/mod_c2/: main.rs
