[package]
name = "darkreach-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = { version = "0.21", features = ["handshake"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"
futures = "0.3.31"
