[package]
name = "darkreach-c2"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["sync", "macros", "rt-multi-thread"] }
actix-web-actors = "4.2"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0.100"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
actix = "0.13.5"
